# DocETL-Pipeline-for-Data-Discovery-in-Scientific-Publications

./: .env.example  .gitignore  PARSING_INFO.md  README.md  main.py  papers_input.json  pipeline_pdf.yaml  pyproject.toml  requirements.txt
config/: repositories.yaml  settings.yaml
data/input/: download_results.csv  download_results_browser.csv
data/input/html/: PMC10855131.html  PMC10972747.html  (+19 more)
logistics/: EXP_groundtruth.csv
logistics/exp_papers/: PMC10855131.xml  PMC10982990.xml  PMC11066909.xml  PMC11129317.xml  PMC11208500.xml  PMC11252349.xml  PMC11320025.xml  PMC11423856.xml  PMC11425778.xml  PMC4836692.xml  PMC6141466.xml
pipelines/: dataset_reference_extraction.yaml  main.py  pipeline_fdr.yaml  pipeline_pdf.yaml  pipeline_rtr.yaml  pipeline_xml.yaml
scripts/: _compute_tokens.py  benchmark_docetl_exp.py  compare.py  download_benchmarks.py  download_papers.py  download_papers_pdf.py  etl.py  eval.py  evaluate_docetl.py  fetch_exp_papers.py  fetch_rev_papers.py  fetch_urls.py  prepare_inputs.py  run_all.py  run_datagatherer.py  run_pipeline.py  run_rev_sample_dg_rtr.py  utils.py
src/: __init__.py
src/baselines/: run_datagatherer.py
src/evaluation/: evaluate.py  load_groundtruth.py  match_records.py  metrics.py
src/extraction/: normalize_outputs.py  registry.py  run_docetl.py  url_builder.py
src/preprocess/: browser_automation.py  build_docetl_input.py  fetch_url.py  parse_html.py  parse_pdf.py
src/reporting/: generate_report.py  visualize_predictions.py
tests/: test_metrics.py  test_normalization.py  test_registry.py  test_url_builder.py
(+12 files in other folders)
