[project]
name = "docetl-pipeline-for-data-discovery-in-scientific-publications"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "docetl>=0.2.6",
    "lxml>=4.9",
    "pandas>=2.0",
    "pdfplumber>=0.10",
    "pymupdf>=1.23",
    "pyrate-limiter>=3.7.0,<4.0",
    "pytest>=7.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "requests>=2.31",
    "tiktoken>=0.5",
    "tqdm>=4.66",
]
